# TracerHW

./: .gitignore  CMakeLists.txt  README.md  args.txt
InputFiles/: NFF.TXT  balls.nff  mount.nnf  rings.nnf
OutputFiles/: MyShadowErr.ppm  MyTeapotWithShadow.ppm  ProfTeapotNoShadow.ppm  ProfTeapotWithShadow.ppm  balls.ppm  gears.ppm  rings.ppm  teapot.ppm  test.ppm
src/: BVH.cpp  BVH.h  BoundingBox.h  Shading.h  slIO.h  slVector.cpp  slVector.h  trace.cpp  trace.h  traceProf.cpp  values.h
